--- a/MainProject/Fronend/MainProject/Menu/Profil.razor.css
+++ b/MainProject/Fronend/MainProject/Menu/Profil.razor.css
@@ -28,3 +28,16 @@
     cursor: pointer;
     font-size: 24px;
 }
+
+.label-center {
+    text-align: center;
+    display: block;
+    font-size: 40px;
+}
+
+.input-format {
+    border-radius: 15px;
+    border: 1.5px solid #6e6e6e;
+    padding-left: 10px;
+    width: 100%;
+}
