--- a/MainProject/MVPv5/MVPv5.Client/Layout/UpperPanel.razor.css
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/UpperPanel.razor.css
@@ -1,4 +1,4 @@
-. {
+.page {
     position: relative;
     display: flex;
     flex-direction: column;
@@ -47,7 +47,7 @@ main {
 }
 
 @media (min-width: 641px) {
-    . {
+    .page {
         flex-direction: row;
     }
 
