--- a/MainProject/MVPv5/MVPv5.Client/Layout/FormLoginRegistration.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/FormLoginRegistration.razor
@@ -20,8 +20,7 @@
 		<div class="login-main">
 			<button class="@GetLoginButtonClass()" @onclick="ToLog">Вход</button>
 			<button class="@GetRegisterButtonClass()" @onclick="ToReg">Регистрация</button>
-			<EditForm method="post" Model="
-			dUser" OnValidSubmit="Register" FormName="registration" Enhance>
+			<EditForm method="post" Model="createdUser" OnValidSubmit="Register" FormName="registration" Enhance>
 				<DataAnnotationsValidator />
 				<br />
 
