--- a/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
@@ -1,14 +1,14 @@
 ﻿@using MVPv5.Client.Menu
 <button class="button-menu" @onclick="click"></button>
 <img class="separator-icon" src="Separator.png" alt="Separator">
-<button class="button-save"></button>
+<button class="button-save" @onclick="OnSaveClicked"></button>
 <button class="button-undo"></button>
 <button class="button-redo"></button>
 
 @if (ShowDiv)
 {
     <div class="PopUp-menu">
-        <p><button class="button-user-menu" @onclick="ShowModal" ><img src="Profil.png" class="profil-img">Профиль</button></p>
+        <p><button class="button-user-menu" @onclick="ShowModal"><img src="Profil.png" class="profil-img">Профиль</button></p>
     </div>
 }
 
@@ -16,7 +16,7 @@
 {
     <div class="modal-overlay">
         <div class="modal-content">
-            <p class="profile-upper"> 
+            <p class="profile-upper">
                 <button class="button-close" @onclick="CloseModal">X</button>
             </p>
             <Profile></Profile>
@@ -27,18 +27,35 @@
 @code {
     public bool ShowMenu { get; set; } = false;
     public bool ShowDiv { get; set; } = false;
+
     public void click()
     {
         ShowDiv = !ShowDiv;
     }
+
     public void ShowModal()
     {
         ShowMenu = !ShowMenu;
         click();
     }
+
     public void CloseModal()
     {
         ShowMenu = false;
     }
 
-} 
+    [Parameter]
+    public EventCallback OnSave { get; set; }
+
+    private async Task OnSaveClicked()
+    {
+        if (OnSave.HasDelegate)
+        {
+            await OnSave.InvokeAsync();
+        }
+        else
+        {
+            Console.WriteLine("Делегат не передан");
+        }
+    }
+}
