--- a/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
@@ -1,9 +1,12 @@
 ﻿@page "/editor"
+@using System.Text
+
 <PageTitle>Editor</PageTitle>
 
 <UpperToolbar />
-
-@* TODO - ввод данных вызывает ошибку и работает неожиданно: внутри страницы можно скроллить *@
+<UpperPanel OnSave="saveDoc">
+    <PanelElements OnSave="saveDoc" />  <!-- Передаем делегат сюда -->
+</UpperPanel>
 
 <div id="editor-container" style="overflow-y:auto; height: 100vh; background: #eee;">
     @foreach (var page in Pages)
@@ -13,6 +16,7 @@
         </div>
     }
 </div>
+
 @code {
     @inject HttpClient httpClient
     @inject NavigationManager NavigationManager
@@ -39,18 +43,30 @@
         }
     }
 
-    //doc request
     protected override void OnInitialized()
     {
         var doc = GetDocumentCreateRequest.JsonData;
         Pages[0].Content = doc;
-
-        //Нормальная реализация
-        // var doc1 = httpClient.PostAsJsonAsync("DocumentEditor/ImportDocument", "123");
-        // var doc = httpClient.GetAsync($"DocumentEditor/export/?id=0");
-        // Pages[0].Content = doc.Result.ToString();
     }
-    
+
+    public async Task saveDoc()
+    {
+        // userDoc = Pages[0].Content;
+        var page = Pages[0];
+        string content = await JS!.InvokeAsync<string>("getContent", page.ElementRef);
+        page.Content = content;
+        //text to bytes
+        byte[] bytes = Encoding.UTF8.GetBytes(content);
+        foreach (byte b in bytes)
+        {
+            Console.WriteLine(b);
+        }
+        //bytes to string
+        string ?textFromByte = null;
+
+            textFromByte += Encoding.UTF8.GetString(bytes);
+        Console.WriteLine(textFromByte);
+    }
+    string ?userDoc = null;
     DocumentCreateRequest GetDocumentCreateRequest { get; set; } = new DocumentCreateRequest { Name = "FirstDoc", JsonData = "12312312312", Metadata = null, TemplateId = 0 };
-    
 }
