--- a/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
@@ -8,7 +8,7 @@
 @if (ShowDiv)
 {
     <div class="PopUp-menu">
-        <button class="button-user-menu" @onclick="ShowModal" ><img src="Profil.png" class="profil-img">Профиль</button>
+        <button class="button-user-menu" @onclick="ShowModal"><img src="Profil.png" class="profil-img">Профиль</button>
         <button class="button-user-menu" @onclick="DivShow"><img src="Shablon.png" class="profil-img">Выбор шаблона</button>
         @if (ShowDiv1)
         {
@@ -18,7 +18,7 @@
 }
 @if (Flag() == true)
 {
-    
+
 }
 @if (ShowMenu)
 {
@@ -31,7 +31,7 @@
         </div>
     </div>
 }
-@if (f.ShowSelectMenu == true)
+@* @if (f.ShowSelectMenu == true)
 {
     <div class="modal-overlay">
         <div class="modal-content">
@@ -41,7 +41,7 @@
             <Select></Select>
         </div>
     </div>
-}
+} *@
 
 @code {
     public bool ShowMenu { get; set; } = false;
