--- a/MainProject/MVPv5/MVPv5.Client/Layout/TemplatePreparing.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/TemplatePreparing.razor
@@ -2,9 +2,15 @@
 @inherits LayoutComponentBase
 
 
-<input style="width: 100%" placeholder="ФИО" @bind="fullName"/> <br> <br>
-<input placeholder="Год рождения" @bind="dateOfBirth"/> <br> <br>
-<input placeholder="Группа" @bind="group"/> <br> <br>
+<input style="width: 100%" placeholder="ФИО" class="input-format" @bind="fullName" />
+<br>
+<br>
+<input placeholder="Год" class="input-format" @bind="dateOfBirth" />
+<br>
+<br>
+<input placeholder="Группа" class="input-format" @bind="group" />
+<br>
+<br>
 <p style="text-align: center;"><button class="button-cancel">Отменить</button><button class="button-accept" @onclick="CreateTemplate">Принять</button></p>
 
 @code {
