--- a/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Layout/PanelElements.razor
@@ -79,6 +79,7 @@
         }
         else
         {
+            // TODO - убрать все CWr
             Console.WriteLine("Делегат не передан");
         }
     }
