--- a/MainProject/MVPv5/MVPv5.Client/Menu/Profile.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Menu/Profile.razor
@@ -1,4 +1,6 @@
-﻿
+﻿@using MVPv5.Application.Contracts.User
+@using MVPv5.Application.Contracts.User.v1
+
 <p><br><label class="label-center">Настройки профиля</label></p>
 <p><label>Никнейм</label></p>
 <p><input class="input-format" @bind=login/><br></p>
@@ -10,9 +12,9 @@
 @code {
     //Заглушка
 
-    public UserGetResponse currentUser { get; set; } = new UserGetResponse { Id = 1, AccessRule = 1, DateCreation = new DateOnly(2023, 12, 1), Documents = null, Login = "Pensil", Nickname = "Vova228", Password = "1488" };
-    private string login { get; set; }
-    private string password { get; set; }
+    private UserGetResponse currentUser { get; set; } = new UserGetResponse { Id = 1, AccessRule = 1, DateCreation = new DateOnly(2023, 12, 1), Login = "Pensil", Nickname = "Vova228", Password = "1488" };
+    private string? login { get; set; }
+    private string? password { get; set; }
     protected override void OnInitialized()
     {
         login = currentUser.Login;
@@ -21,6 +23,7 @@
     private async Task ChangeUser()
     {
         //Imitation
+        // TODO - слишком жёсткая привязка к адресу
         var response = await httpClient.PatchAsJsonAsync($"User/UpdatePassword/?id={currentUser.Id}", currentUser);
     }
 }
