--- a/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
+++ b/MainProject/MVPv5/MVPv5.Client/Pages/Editor.razor
@@ -1,73 +1,73 @@
 ﻿@page "/editor"
 @using System.Text
 @using MVPv5.Application.Contracts.Document.v1
-
 <PageTitle>Editor</PageTitle>
 
-@* <UpperToolbar /> *@
+<UpperToolbar />
 <UpperPanel OnSave="saveDoc">
-    <PanelElements OnSave="saveDoc" />  <!-- Передаем делегат сюда -->
+	<PanelElements OnSave="saveDoc" />  <!-- Передаем делегат сюда -->
 </UpperPanel>
 
 <div id="editor-container" style="overflow-y:auto; height: 100vh; background: #eee;">
-    @foreach (var page in Pages)
-    {
-        <div @ref="page.ElementRef" class="docpage" contenteditable="true" @oninput="CheckOverflow">
-            <div>@(page.Content)</div>
-        </div>
-    }
+	@foreach (var page in Pages)
+	{
+		<div @ref="page.ElementRef" class="docpage" contenteditable="true" @oninput="CheckOverflow">
+			<div>@(page.Content)</div>
+		</div>
+	}
 </div>
 
-
-@inject HttpClient httpClient
-    @inject NavigationManager NavigationManager
 @code {
-    class PageModel
-    {
-        public string Content { get; set; } = "";
-        public ElementReference ElementRef { get; set; }
-    }
+	@inject HttpClient httpClient
+	@inject NavigationManager NavigationManager
 
-    List<PageModel> Pages = new() { new PageModel() };
+	class PageModel
+	{
+		public string Content { get; set; } = "";
+		public ElementReference ElementRef { get; set; }
+	}
 
-    [Inject] IJSRuntime? JS { get; set; }
+	List<PageModel> Pages = new() { new PageModel() };
 
-    async Task CheckOverflow(ChangeEventArgs e)
-    {
-        var lastPage = Pages.Last();
-        bool isOverflowing = await JS!.InvokeAsync<bool>("checkPageOverflow", lastPage.ElementRef);
+	[Inject] IJSRuntime? JS { get; set; }
 
-        if (isOverflowing)
-        {
-            Pages.Add(new PageModel());
-            StateHasChanged(); // Ререндерим компонент
-        }
-    }
+	async Task CheckOverflow(ChangeEventArgs e)
+	{
+		var lastPage = Pages.Last();
+		bool isOverflowing = await JS!.InvokeAsync<bool>("checkPageOverflow", lastPage.ElementRef);
 
-    protected override void OnInitialized()
-    {
-        // var doc = GetDocumentCreateRequest.JsonData;
-        // Pages[0].Content = doc;
-    }
+		if (isOverflowing)
+		{
+			Pages.Add(new PageModel());
+			StateHasChanged(); // Ререндерим компонент
+		}
+	}
 
-    public async Task saveDoc()
-    {
-        // userDoc = Pages[0].Content;
-        var page = Pages[0];
-        string content = await JS!.InvokeAsync<string>("getContent", page.ElementRef);
-        page.Content = content;
-        //text to bytes
-        byte[] bytes = Encoding.UTF8.GetBytes(content);
-        foreach (byte b in bytes)
-        {
-            Console.WriteLine(b);
-        }
-        //bytes to string
-        string ?textFromByte = null;
+	protected override void OnInitialized()
+	{
+		// var doc = GetDocumentCreateRequest.JsonData;
+		// Pages[0].Content = doc;
+	}
 
-            textFromByte += Encoding.UTF8.GetString(bytes);
-        Console.WriteLine(textFromByte);
-    }
-    // string ?userDoc = null;  
-    DocumentCreateRequest GetDocumentCreateRequest { get; set; } = new DocumentCreateRequest { Name = "FirstDoc", TemplateId = 0 };
+	public async Task saveDoc()
+	{
+		// userDoc = Pages[0].Content;
+		var page = Pages[0];
+		string content = await JS!.InvokeAsync<string>("getContent", page.ElementRef);
+		page.Content = content;
+		//text to bytes
+		byte[] bytes = Encoding.UTF8.GetBytes(content);
+		foreach (byte b in bytes)
+		{
+			Console.WriteLine(b);
+		}
+		//bytes to string
+		string? textFromByte = null;
+
+		textFromByte += Encoding.UTF8.GetString(bytes);
+		Console.WriteLine(textFromByte);
+	}
+	string? userDoc = null;
+
+	DocumentCreateRequest GetDocumentCreateRequest { get; set; } = new DocumentCreateRequest { Name = "FirstDoc", TemplateId = 0 };
 }
